--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     padding: 0px 10%;
     /* background-color: yellow; */
     display: flex;
-    justify-content: space-between;
+    column-gap: 100px;
 }
 
 .boxes{
